Fix deprecated URL usage for Sonar